--- a/index.html
+++ b/index.html
@@ -121,79 +121,10 @@
             <p class="hero-form-subtitle">Tell us about your project and we'll help you find suitable Ruby on Rails
               development companies.</p>
 
-            <!-- Youform Embed Placeholder -->
+            <!-- Youform Embed -->
             <div class="youform-container" id="youformEmbed">
-              <!-- Replace the content below with your Youform embed code -->
-              <form class="lead-form" id="leadForm" action="#" method="POST">
-                <div class="form-row">
-                  <div class="form-group">
-                    <label class="form-label" for="fullName">Full Name *</label>
-                    <input type="text" id="fullName" name="fullName" class="form-input" placeholder="John Smith"
-                      required>
-                  </div>
-                  <div class="form-group">
-                    <label class="form-label" for="company">Company Name *</label>
-                    <input type="text" id="company" name="company" class="form-input" placeholder="Your Company"
-                      required>
-                  </div>
-                </div>
-
-                <div class="form-row">
-                  <div class="form-group">
-                    <label class="form-label" for="email">Work Email *</label>
-                    <input type="email" id="email" name="email" class="form-input" placeholder="john@company.com"
-                      required>
-                  </div>
-                  <div class="form-group">
-                    <label class="form-label" for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone" class="form-input" placeholder="+1 (555) 000-0000">
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="form-label" for="projectType">Project Type *</label>
-                  <select id="projectType" name="projectType" class="form-select" required>
-                    <option value="">Select project type...</option>
-                    <option value="mvp">MVP Development</option>
-                    <option value="api">API Development</option>
-                    <option value="ecommerce">E-commerce Platform</option>
-                    <option value="saas">SaaS Application</option>
-                    <option value="migration">Legacy System Migration</option>
-                    <option value="maintenance">Maintenance & Support</option>
-                    <option value="other">Other</option>
-                  </select>
-                </div>
-
-                <div class="form-row">
-                  <div class="form-group">
-                    <label class="form-label" for="budget">Budget Range</label>
-                    <select id="budget" name="budget" class="form-select">
-                      <option value="">Select budget...</option>
-                      <option value="5k-15k">$5,000 - $15,000</option>
-                      <option value="15k-50k">$15,000 - $50,000</option>
-                      <option value="50k-100k">$50,000 - $100,000</option>
-                      <option value="100k+">$100,000+</option>
-                    </select>
-                  </div>
-                  <div class="form-group">
-                    <label class="form-label" for="timeline">Timeline</label>
-                    <select id="timeline" name="timeline" class="form-select">
-                      <option value="">Select timeline...</option>
-                      <option value="immediately">Immediately</option>
-                      <option value="1-3months">1-3 Months</option>
-                      <option value="3-6months">3-6 Months</option>
-                      <option value="exploring">Just Exploring</option>
-                    </select>
-                  </div>
-                </div>
-
-                <button type="submit" class="btn btn-primary btn-lg form-submit">
-                  Get Free Quote <span class="btn-icon">→</span>
-                </button>
-
-                <p class="form-note">🔒 Your information is secure and will never be shared.</p>
-              </form>
-              <!-- End placeholder form -->
+              <div data-youform-embed data-form='njigcfhm' data-width='100%' data-height='500'></div>
+              <script src="https://app.youform.com/embed.js"></script>
             </div>
           </div>
         </div>
