--- a/hire-ruby-developers.html
+++ b/hire-ruby-developers.html
@@ -4,6 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="aC_UB5MyxmeJCL1GvOF56L-zS3PSx82-NTytXVoAeck" />
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KZ6WB3ZWZP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-KZ6WB3ZWZP');
+    </script>
     <meta name="description"
         content="Hire offshore Ruby on Rails developers for your next project. Access vetted RoR talent at competitive rates. Offshore development typically offers significant cost savings.">
     <meta name="keywords"
